--- a/Kubernetes/deployment.yaml
+++ b/Kubernetes/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: app
-          image: santhosh2010/demo:latest
+          image: santhosh2010/java_micro:latest
           ports:
             - containerPort: 8080
