--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>com.example</groupId>
     <artifactId>demo</artifactId>
     <version>1.0.0</version>
@@ -14,7 +16,8 @@
         <java.version>11</java.version>
         <spring.boot.version>2.6.3</spring.boot.version>
         <sonar.projectKey>your-key</sonar.projectKey>
-        <sonar.host.url>http://<your-sonarqube-host></sonar.host.url>
+        <sonar.host.url>http://localhost:9000</sonar.host.url>
+        <!-- Replace localhost:9000 with your actual SonarQube host if needed -->
     </properties>
 
     <dependencies>
